# oit_navigation_microbot_01

./: CMakeLists.txt  package.xml
config/rviz/: mapping.rviz  navigation.rviz  simple.rviz
launch/includes/: devices.launch  jetbot_camera.launch  state_publisher.launch  teleop_base.launch  teleop_mapping.launch  teleop_simple.launch  view_compressed_images.launch  web.launch
launch/includes/move_base/: costmap_common.yaml  costmap_global.yaml  move_base.xml
launch/real/: base.launch  detect_collision.launch  detectnet.launch  mapping.launch  navigation.launch  simple.launch
launch/simulation/: base.launch  mapping.launch  navigation.launch  simple.launch  stage.launch
maps/: make_simulation_world.sh  sample_01.world  sample_02.world
maps/simulator_files/: device.inc  map.inc
scripts/: compressed_image_viewer.py  detect_collision_python2.py  detect_collision_python3.py  detect_collision_python3.sh  detectnet_view.py  jetbot_camera_image_modifier.py  test_image.py  test_motors.py  test_odometry.py
scripts/libs/: detect_collision_core.py
scripts/state/: get_image__state.py  go_straight.py  turn.py  wait_for_msg_state.py
scripts/state/utils/: funcs.py  times.py  trapezoidal_control.py
urdf/: jetbot_camera.xacro  microbot_01.xacro  microbot_01_base.xacro  microbot_01_jetbot_camera.xacro  realsense.xacro
www/: index.html  teleop_mapping.html  teleop_navigation.html  teleop_simple.html
www/css/: common.css
www/js/: oit.js
