<?xml version="1.0"?>
<package format="2">
  <name>oit_navigation_microbot_01</name>
  <version>1.0.0</version>
  <description>The oit_navigation_microbot_01 package</description>
  <maintainer email="5770105+KMiyawaki@users.noreply.github.com">K.Miyawaki</maintainer>
  <license>BSD</license>
  <author email="5770105+KMiyawaki@users.noreply.github.com">K.Miyawaki</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
